--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-TWITTER_CONSUMER_KEY=your-twitter-consumer-key
-TWITTER_CONSUMER_SECRET=your-twitter-consumer-secret
-# TWITTER_CALLBACK_URL=http://localhost:4000/auth/twitter/callback
- TWITTER_CALLBACK_URL=http://localhost:3000/api/auth/callback/twitter
-SESSION_SECRET=your-session-secret
+   TWITTER_API_KEY=GPUvihIXbmh85zuehstzRQxEc
+   TWITTER_API_SECRET_KEY=7avHIh5IOqciMchYxT72CQn84UE3dzghuCWoKEA9yHY2YdiRg3
+   TWITTER_CALLBACK_URL=http://localhost:5173/callback
+   TWITTER_CLIENT_ID=NFBOU08xNmZuMkFkQlBKSjhJWmM6MTpjaQ
+   TWITTER_CLIENT_SECRET=J28HuocLkWJIZyBJaBjAfKmcj882vvfIcMbn2KttGfYJNR0BPb
